# Amazon-Product

./: docker-compose.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  seed.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  deps.py  matches.py  notifications.py  resale.py  returns.py  shop.py
backend/app/core/: __init__.py  config.py  errors.py  matching.py  scoring.py  security.py
backend/app/db/: __init__.py  base.py  redis_gateway.py  session.py
backend/app/models/: __init__.py  analytics_counter.py  cart_item.py  enums.py  hub.py  match_candidate.py  metric_snapshot.py  (+6 more)
backend/tests/: test_admin.py  test_admin_dispatch.py  test_admin_dispatch_property.py  test_admin_property.py  test_admin_returns_property.py  test_auth.py  test_db_gateway.py  test_demand_property.py  test_expiry_sweep.py  test_health.py  test_lifecycle_property.py  test_lifecycle_routing_property.py  test_matches.py  test_matches_accept_path_property.py  test_matches_accept_reject_property.py  test_matches_cascade_property.py  test_matching_creation_property.py  test_matching_distance_property.py  test_matching_duplicate_property.py  test_matching_engine.py  test_matching_noop_property.py  test_matching_selection_property.py  test_notifications.py  test_notifications_property.py  test_pricing_property.py  test_pricing_summary_property.py  test_resale.py  test_resale_feed_property.py  test_resale_property.py  test_returns.py  test_returns_property.py  test_scoring_property.py  test_seed_integration.py  test_shop.py
(+81 files in other folders)
